// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/group_details/GroupTeamsAndChannels should match snapshot, with teams, with channels and loaded 1`] = `
<div
  className="group-teams-and-channels"
>
  <div
    className="group-teams-and-channels--header"
  >
    <FormattedMessage
      defaultMessage="Name"
      id="admin.group_settings.group_profile.group_teams_and_channels.name"
      values={Object {}}
    />
  </div>
  <div
    className="group-teams-and-channels--body"
  >
    <GroupTeamsAndChannelsRow
      hasChildren={true}
      id="11111111111111111111111111"
      implicit={false}
      key="11111111111111111111111111"
      name="Team 1"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="public-team"
    />
    <GroupTeamsAndChannelsRow
      id="44444444444444444444444444"
      key="44444444444444444444444444"
      name="Channel 4"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="public-channel"
    />
    <GroupTeamsAndChannelsRow
      hasChildren={false}
      id="22222222222222222222222222"
      implicit={false}
      key="22222222222222222222222222"
      name="Team 2"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="private-team"
    />
    <GroupTeamsAndChannelsRow
      hasChildren={false}
      id="33333333333333333333333333"
      implicit={false}
      key="33333333333333333333333333"
      name="Team 3"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="private-team"
    />
    <GroupTeamsAndChannelsRow
      hasChildren={true}
      id="99999999999999999999999999"
      implicit={true}
      key="99999999999999999999999999"
      name="Team 9"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="public-team"
    />
    <GroupTeamsAndChannelsRow
      id="55555555555555555555555555"
      key="55555555555555555555555555"
      name="Channel 5"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="private-channel"
    />
    <GroupTeamsAndChannelsRow
      id="55555555555555555555555555"
      key="55555555555555555555555555"
      name="Channel 5"
      onRemoveItem={[Function]}
      onToggleCollapse={[Function]}
      type="private-channel"
    />
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupTeamsAndChannels should match snapshot, with teams, with channels and loading 1`] = `
<div
  className="group-teams-and-channels"
>
  <div
    className="group-teams-and-channels-loading"
  >
    <i
      className="fa fa-spinner fa-pulse fa-2x"
    />
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupTeamsAndChannels should match snapshot, without teams, without channels and loaded 1`] = `
<div
  className="group-teams-and-channels"
>
  <div
    className="group-teams-and-channels-empty"
  >
    <FormattedMessage
      defaultMessage="No teams or channels specified yet"
      id="admin.group_settings.group_details.group_teams_and_channels.no-teams-or-channels-speicified"
      values={Object {}}
    />
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupTeamsAndChannels should match snapshot, without teams, without channels and loading 1`] = `
<div
  className="group-teams-and-channels"
>
  <div
    className="group-teams-and-channels-loading"
  >
    <i
      className="fa fa-spinner fa-pulse fa-2x"
    />
  </div>
</div>
`;
